--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Your Name
+# Hi, I'm Jason Buffin
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+I'm a software engineer with a passion for creating and maintaining software that is reliable, maintainable, and scalable. I have experience with a variety of technologies, including Java, Python, JavaScript, and SQL. I'm also familiar with a variety of tools and frameworks, including Spring Boot, Django, React, and Angular.
